Fix word wrapping CSS in source mode
Bug: T159271
Bug: T169851

--- a/src/ui/styles/ve.ui.Surface.css
+++ b/src/ui/styles/ve.ui.Surface.css
@@ -38,4 +38,7 @@
 
 .ve-ui-surface-source .ve-ce-paragraphNode {
 	margin: 0;
+	word-wrap: break-word;
+	white-space: pre-wrap;
+	word-break: normal;
 }
